Slides 06: particle filter

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -10,6 +10,8 @@
         \item Slides de ECI 2012
         \item Seminario de curso: CS373 Udacity Programming a Robotic Car
         \item \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-14-ekf.pptx.pdf}
+        \item \url{https://rse-lab.cs.washington.edu/projects/mcl}
+        \item \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam09-particle-filter.pdf}
     \end{itemize}
     
 \end{frame}
@@ -17,9 +19,18 @@
 \begin{frame}
 	\frametitle{Bibliografía}
 	
-	Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
-	
+	EKF:
+    Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
 	Shon and Lindsen: Manipulating the Multivariate Gaussian Density
+
+    Particle Filter:
+    Capítulo 3 \cite{thrun2005probabilistic}
+
+    Monte Carlo Localization:
+    Capítulo 8.3 \cite{thrun2005probabilistic}
+
+    Modelos de observación y movimiento:
+    Capítulo 5 y 6 \cite{thrun2005probabilistic}
 	
 	\printbibliography
 	
