Slides 06: Minor changes

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,7 +1,7 @@
 \begin{frame}
     \frametitle{Material}
     
-    Vídeos para armar estas slides:
+    Material para armar estas slides:
     \begin{itemize}
         \item Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE} 
         \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
