Slides 07: Add occupancy grid map video

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -641,13 +641,15 @@ tenemos entonces:
 \end{frame}
 
 \begin{frame}
-    \frametitle{Agregar vídeo de ejemplo}
+    \frametitle{Ejemplo: Occupancy Grid Map}
     \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
    
+    \note{Video tomado de https://www.youtube.com/watch?v=ykOTfrS5pO4}
 
-    \url{https://www.youtube.com/watch?v=ykOTfrS5pO4}
+    \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.8\columnwidth]{./images/occupancy_grid_map_video.jpg}}{./videos/occupancy_grid_map.mp4}
+    \end{center}
     
-    \TODO{agregar vídeo de ejemplo de grid mapping como hace cyrill stachniss}
 \end{frame}
 
 \begin{frame}
