Slides 06: Minor changes

--- a/teoricas/teorica_07/src/bibliography.tex
+++ b/teoricas/teorica_07/src/bibliography.tex
@@ -1,14 +1,21 @@
 \begin{frame}
 	\frametitle{Bibliografía}
    
-    Static state binary Bayes filter:
-    
-    Capítulo 4.2 de \cite{thrun2005probabilistic}
-    
-    Occupancy Grid Mapping:
-    
-    Capítulo 9.1 y 9.2 de \cite{thrun2005probabilistic}
-	
+    \begin{itemize}
+        \item Static state binary Bayes filter:
+
+        \begin{itemize}
+            \item Capítulo 4.2 de \cite{thrun2005probabilistic}
+        \end{itemize}
+        
+        \item Occupancy Grid Mapping:
+        
+        \begin{itemize}
+            \item Capítulo 9.1 y 9.2 de \cite{thrun2005probabilistic}
+        \end{itemize}
+
+    \end{itemize}
+
 	\printbibliography
 	
 \end{frame}
