Slides 08: Add SLAM Handbook to bibliography

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -400,3 +400,15 @@
   author={Lynch, Kevin M. and Park, Frank C.},
   year={2017}
 }
+
+
+SLAM Handbook
+@book{carlone2025slamhandbook,
+  title={\href{https://github.com/SLAM-Handbook-contributors/slam-handbook-public-release}{SLAM Handbook}},
+  publisher={Cambridge University Press},
+  author={Luca Carlone and Ayoung Kim and Frank Dellaert and Timothy Barfoot and Daniel Cremers},
+  year={2025},
+  publisher={Cambridge University Press},
+  url={https://github.com/SLAM-Handbook-contributors/slam-handbook-public-release/blob/main/main.pdf}
+}
+
