--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -22,7 +22,6 @@
 \begin{frame}
     \frametitle{Más material}
     
-    Material para armar estas slides:
     \begin{itemize}
         \item Joan Solá - Lie theory for the roboticist \url{https://youtu.be/gy8U7S4LWzs}
         \item Joan Solá - Course on SLAM \url{https://raw.githubusercontent.com/joansola/slamtb/graph/courseSLAM.pdf}
@@ -31,7 +30,7 @@
         \item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
     \end{itemize}
 
-    \TODO{Trabajo Práctico de SLAM a considerar\href{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}} 
+    \alert{Trabajo Práctico de SLAM a considerar \url{https://github.com/MiguelAngelCalveraUnizar/Mini-SLAM_student}}
 
     
 \end{frame}
@@ -47,6 +46,7 @@
     \nocite{grisetti2010tutorial}
     \nocite{chebrolu2021adaptive}
     \nocite{dellaert2017factor}
+    \nocite{carlone2025slamhandbook}
 
 	
 	\printbibliography
