Slides 06: Minor changes

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -19,18 +19,33 @@
 \begin{frame}
 	\frametitle{Bibliografía}
 	
-	EKF:
-    Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
-	Shon and Lindsen: Manipulating the Multivariate Gaussian Density
 
-    Particle Filter:
-    Capítulo 3 \cite{thrun2005probabilistic}
+    \begin{itemize}
 
-    Monte Carlo Localization:
-    Capítulo 8.3 \cite{thrun2005probabilistic}
+        \item EKF:
+        \begin{itemize}
+            \item Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
+            \item Shon and Lindsen: Manipulating the Multivariate Gaussian Density
+        \end{itemize}
+        
+        \item Particle Filter:
+        \begin{itemize}
+            \item Capítulo 3 \cite{thrun2005probabilistic}
+        \end{itemize}
+        
 
-    Modelos de observación y movimiento:
-    Capítulo 5 y 6 \cite{thrun2005probabilistic}
+        \item Monte Carlo Localization:
+        \begin{itemize}
+            \item Capítulo 8.3 \cite{thrun2005probabilistic}
+        \end{itemize}
+        
+        
+        \item Modelos de observación y movimiento:
+        \begin{itemize}
+            \item Capítulo 5 y 6 \cite{thrun2005probabilistic}
+        \end{itemize}
+
+    \end{itemize}
 	
 	\printbibliography
 	
