--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -3,7 +3,8 @@
     
     \begin{itemize}
         \item Bayes filter
-        \item Kalman filter
+        \item Kalman filter (KF)
+        \item Extended Kalman filter (EKF)
         \item Particle filter
     \end{itemize}
     
