Slides 06: Move factor graph content to factor_graph.tex file

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -33,6 +33,9 @@
 	
 	\section{SLAM}
 	\input{src/slam.tex}
+
+	\section{Factor-Graph}
+	\input{src/factor_graph.tex}
     
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
