Slides 06: Rename factor_graph.tex to graph_slam.tex

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -35,7 +35,7 @@
 	\input{src/slam.tex}
 
 	\section{Factor-Graph}
-	\input{src/factor_graph.tex}
+	\input{src/graph_slam.tex}
     
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
