Slides 08: Minor changes

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -34,6 +34,9 @@
 	\section{SLAM}
 	\input{src/slam.tex}
 
+	\section{EKF-SLAM}
+	\input{src/ekf_slam.tex}
+
 	\section{Factor-Graph}
 	\input{src/graph_slam.tex}
     
