--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -4,6 +4,7 @@
     Material para armar estas slides:
     \begin{itemize}
         \item Cyrill Stachniss SLAM \url{https://youtu.be/BuRCJ2fegcc}
+        \item Cyrill Stachniss EKF-SLAM \url{https://www.youtube.com/watch?v=X30sEgIws0g}
         \item Cyrill Stachniss Factor Graph \url{https://youtu.be/uuiaqGLFYa4}
         \item Cyrill Stachniss Graph-based SLAM using Pose Graphs \url{https://youtu.be/uHbRKvD8TWg}
         \item Cyrill Stachniss Graph-Based SLAM with Landmarks \url{https://youtu.be/mZBdPgBtrCM}
